// Copyright 2024 CardinalHQ, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package chqpb;

option go_package = ".;chqpb";

message LogStatsReport {
	int64 submittedAt = 1;
	repeated LogStats stats = 2;
}

message LogStats {
	string serviceName = 1;
	int64 fingerprint = 2;
	Phase phase = 3;
	int64 count = 4;
	int64 logSize = 5; // TODO // number of bytes dropped or sent (message field size)
	string exemplar = 6; // TODO
}

message MetricStatsReport {
	int64 submittedAt = 1;
	repeated MetricStats stats = 2;
}

message MetricStats {
	string name = 1;
	string tagName = 2;
	string serviceName = 3; // TODO
	double cardinalityEstimate = 4;
	bytes hll = 5;
	Phase phase = 6;
}

enum Phase {
	PASSTHROUGH = 0;
	AGGREGATED = 1;
	AGGREGATION_OUTPUT = 2;
	FILTERED = 3;
	DRY_RUN_FILTERED = 4;
}